apps/default/gateway/manifests/mgmt-tls-gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mgmt-tls-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  gatewayClassName: cilium
  addresses:
  - type: IPAddress
    value: 192.168.77.32
  listeners:
  - name: unifi-tls
    hostname: "unifi.mgmt.sholdee.net"
    protocol: TLS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Passthrough
